[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/steve/Steve.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/level_env.tres" type="Environment" id=3]
[ext_resource path="res://scenes/enemy/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/coin/Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/tests/box/Box.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/level/scripts/CoinCounter.gd" type="Script" id=7]
[ext_resource path="res://scenes/level/scripts/End.gd" type="Script" id=8]
[ext_resource path="res://scenes/level/scripts/Level.gd" type="Script" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 24, 1, 24 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.74902, 0.74902, 1, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 48, 2, 48 )

[sub_resource type="Animation" id=4]
resource_name = "Enemy1Animation"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.5, 3, 4, 4.5, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -4, 0, -4 ), Vector3( -4, 0, -4 ), Vector3( -12, 0, -4 ), Vector3( -12, 0, -4 ), Vector3( -12, 0, 4 ), Vector3( -12, 0, 4 ), Vector3( -12, 0, -4 ), Vector3( -12, 0, -4 ), Vector3( -4, 0, -4 ) ]
}

[node name="Level" type="Spatial"]
script = ExtResource( 9 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 32, 64 )
environment = ExtResource( 3 )
target = NodePath("../Steve/CameraTarget")
enabled = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, 0, 32, 0 )
shadow_enabled = true

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 3 )
material/0 = null

[node name="Steve" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CameraTarget" type="Spatial" parent="Steve"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 5, 16 )

[node name="Enemies" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Enemy1" parent="Enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemies/Enemy1"]
autoplay = "Enemy1Animation"
anims/Enemy1Animation = SubResource( 4 )

[node name="Coins" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Coin1" parent="Coins" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 4 )

[node name="Boxes" type="Spatial" parent="."]

[node name="Box1" parent="Boxes" instance=ExtResource( 6 )]
transform = Transform( 0.707107, -0.707107, 0, 0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, -16, 8, -16 )

[node name="Box2" parent="Boxes" instance=ExtResource( 6 )]
transform = Transform( 0.707107, -0.707107, -8.9407e-08, -0.353553, -0.353553, -0.866025, 0.612372, 0.612372, -0.5, -16, 16, -16 )

[node name="Box3" parent="Boxes" instance=ExtResource( 6 )]
transform = Transform( 0.612372, -0.612372, 0.5, 0.707107, 0.707107, 0, -0.353553, 0.353553, 0.866025, -16, 32, -16 )

[node name="HUD" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="ColorRect" parent="HUD"]
margin_left = 1152.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 80.0
color = Color( 0.411765, 0.411765, 0.411765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Times" type="Label" parent="HUD/Score"]
margin_left = 8.0
margin_top = 12.0
margin_right = 32.0
margin_bottom = 36.0
text = "x"
valign = 1

[node name="CoinCounter" type="Label" parent="HUD/Score"]
margin_left = 32.0
margin_top = 12.0
margin_right = 96.0
margin_bottom = 36.0
text = "0"
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="ColorRect" parent="HUD"]
visible = false
margin_left = 512.0
margin_top = 328.0
margin_right = 768.0
margin_bottom = 392.0
grow_horizontal = 0
grow_vertical = 0
color = Color( 0.411765, 0.411765, 0.411765, 1 )
script = ExtResource( 8 )

[node name="Label" type="Label" parent="HUD/End"]
margin_right = 256.0
margin_bottom = 64.0
align = 1
valign = 1
[connection signal="tree_entered" from="." to="." method="_on_Level_tree_entered"]
[connection signal="body_entered" from="Enemies/Enemy1" to="Enemies/Enemy1" method="_on_Enemy_body_entered"]
[connection signal="hit" from="Enemies/Enemy1" to="." method="_on_Enemy_hit"]
[connection signal="collected" from="Coins/Coin1" to="." method="_on_Coin_collected"]
[connection signal="tree_exited" from="Coins/Coin1" to="." method="_on_Coin_tree_exited"]
